--- a/daemon/rtpengine.pod
+++ b/daemon/rtpengine.pod
@@ -80,6 +80,8 @@ unavailable.
 In this case, startup of the daemon will fail with an error if this option
 is given.
 
+=item B<-F>, B<--enable-jb>
+
 =item B<-i>, B<--interface=>[I<NAME>B</>]I<IP>[B<!>I<IP>]
 
 Specifies a local network interface for RTP.
